[gd_scene load_steps=15 format=2]

[ext_resource path="res://Scripts/Diolog_intro.gd" type="Script" id=1]
[ext_resource path="res://Fonts/Kid_Font_.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Sprites/Objects/turbina0000.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Objects/papel_pautado_a4.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Objects/hidro0000.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Objects/Text_box_intro.png" type="Texture" id=6]
[ext_resource path="res://Sprites/Objects/reactor0000.png" type="Texture" id=7]
[ext_resource path="res://Sprites/Objects/sun0000.png" type="Texture" id=8]
[ext_resource path="res://Dialog_system/fonts/GOUDYSTO.TTF" type="DynamicFontData" id=9]

[sub_resource type="DynamicFont" id=16]
size = 60
outline_size = 1
outline_color = Color( 0, 0, 1, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=17]
size = 60
outline_size = 3
outline_color = Color( 1, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=18]
size = 26
outline_color = Color( 0, 0, 1, 1 )
font_data = ExtResource( 9 )

[sub_resource type="Animation" id=19]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("..:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=20]
resource_name = "event"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("..:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0, 0, 0, 1 ) ]
}

[node name="Intro" type="Node2D"]

[node name="Graphics" type="Node2D" parent="."]

[node name="Bakcground" type="Sprite" parent="Graphics"]
position = Vector2( 399, 400.46 )
scale = Vector2( 0.707965, 0.495575 )
texture = ExtResource( 4 )

[node name="Wind" type="Label" parent="Graphics"]
margin_left = -18.0
margin_top = 127.0
margin_right = 324.0
margin_bottom = 227.0
rect_rotation = -5.04012
custom_colors/font_color = Color( 0, 0, 1, 1 )
custom_fonts/font = SubResource( 16 )
text = "Wind"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Wind5" type="Label" parent="Graphics"]
margin_left = 202.0
margin_top = 12.0
margin_right = 579.0
margin_bottom = 112.0
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_fonts/font = SubResource( 17 )
text = "Energy Sources"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Wind2" type="Label" parent="Graphics"]
margin_left = 400.0
margin_top = 102.0
margin_right = 742.0
margin_bottom = 202.0
rect_rotation = 3.97143
custom_colors/font_color = Color( 0, 0, 1, 1 )
custom_fonts/font = SubResource( 16 )
text = "Solar"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Wind3" type="Label" parent="Graphics"]
margin_left = -13.0
margin_top = 398.0
margin_right = 329.0
margin_bottom = 498.0
custom_colors/font_color = Color( 0, 0, 1, 1 )
custom_fonts/font = SubResource( 16 )
text = "Hydro"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Wind4" type="Label" parent="Graphics"]
margin_left = 407.0
margin_top = 458.0
margin_right = 749.0
margin_bottom = 558.0
rect_rotation = -2.11201
custom_colors/font_color = Color( 0, 0, 1, 1 )
custom_fonts/font = SubResource( 16 )
text = "Nuclear"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Hidro0000" type="Sprite" parent="Graphics"]
position = Vector2( 235, 569 )
rotation = -0.0644348
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 5 )

[node name="Reactor0000" type="Sprite" parent="Graphics"]
position = Vector2( 756, 614 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 7 )

[node name="Sun0000" type="Sprite" parent="Graphics"]
position = Vector2( 591, 288 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 8 )

[node name="Turbina0000" type="Sprite" parent="Graphics"]
position = Vector2( 190, 262 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 3 )

[node name="TextBoxIntro" type="Sprite" parent="Graphics"]
position = Vector2( 400, 400 )
texture = ExtResource( 6 )

[node name="Diolog" type="Node2D" parent="."]
script = ExtResource( 1 )

[node name="Control" type="Control" parent="Diolog"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Dialog_box" type="Control" parent="Diolog/Control"]
margin_left = 49.0
margin_top = 241.0
margin_right = 750.0
margin_bottom = 561.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="Diolog/Control/Dialog_box"]
modulate = Color( 0, 0, 0, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 16.0
margin_top = 12.0
margin_right = -7.0
margin_bottom = -9.0
grow_horizontal = 0
custom_colors/default_color = Color( 1, 1, 1, 1 )
custom_fonts/normal_font = SubResource( 18 )
text = "action!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="Diolog/Control/Dialog_box"]

[node name="dialogue_timer" type="Timer" parent="Diolog/Control"]
wait_time = 5.0
one_shot = true

[node name="transition" type="AnimationPlayer" parent="Diolog"]
pause_mode = 2
anims/RESET = SubResource( 19 )
anims/event = SubResource( 20 )

[connection signal="timeout" from="Diolog/Control/dialogue_timer" to="Diolog" method="_on_dialogue_timer_timeout"]
